Apps_deployment/Policy-Group/Policy-image-fromAndTo/allow-image-egress-to-api.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-image-egress-to-api
  namespace: app-services
spec:
  podSelector:
    matchLabels:
      app: image-service
  policyTypes:
  - Egress
  egress:
  - to:
      - podSelector:
          matchLabels:
            app: api-service
    ports:
      - protocol: TCP
        port: 8081
  - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
    ports:
      - protocol: UDP
        port: 53
      - protocol: TCP
        port: 53
