Apps_deployment/Policy-Group/Policy-image-fromAndTo/allow-image-ingress-from-api.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-image-ingress-from-api
  namespace: app-services
spec:
  podSelector:
    matchLabels:
      app: image-service
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: api-service
    ports: 
      - protocol: TCP
        port: 8081
